--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ember-cli-file-picker": "0.0.12",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-inject-live-reload": "^1.10.2",
     "ember-cli-qunit": "^4.4.0",
     "ember-cli-sass": "^7.2.0",
     "ember-cli-sri": "^2.1.1",
@@ -59,13 +59,11 @@
     "emberx-select": "^3.1.1",
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
+    "merge": ">=1.2.1",
     "popper.js": "^1.14.4",
     "qunit-dom": "^0.8.3"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
-  },
-  "dependencies": {
-    "merge": "^1.2.1"
   }
 }
