more cleanup cfn.yaml

--- a/.template.env
+++ b/.template.env
@@ -6,8 +6,8 @@ AWS_EC2_KEY_NAME=[EC2 Key]
 AWS_SNS_EMAIL_ADDRESS=[SNS Email]
 S3_EMR_BUCKET_NAME=[EMR ADAM Code Bucket]
 S3_VCF_BUCKET_NAME=[VCF Input Bucket]
-S3_PARQUET_BUCKET_NAME=[Parquet Output Bucket]
-S3_CLINVAR_BUCKET_NAME=[Clinvar Annotations Bucket]
+S3_VARIANTS_BUCKET_NAME=[Parquet Output Bucket]
+S3_ANNOTATIONS_BUCKET_NAME=[Clinvar Annotations Input Bucket]
 CFN_DOMAINNAME=[CFN Domain Name]
 CFN_CFCERTIFICATE=[CFN Certificate Arn]
 IDENTITY_POOL_ID=[Identity Pool ID]
