--- a/.template.env
+++ b/.template.env
@@ -8,7 +8,8 @@ S3_EMR_BUCKET_NAME=[EMR ADAM Code Bucket]
 S3_VCF_BUCKET_NAME=[VCF Input Bucket]
 S3_VARIANTS_BUCKET_NAME=[Parquet Output Bucket]
 S3_ANNOTATIONS_BUCKET_NAME=[Clinvar Annotations Input Bucket]
-#CFN_DOMAINNAME=[CFN Domain Name]
-#CFN_CFCERTIFICATE=[CFN Certificate Arn]
-IDENTITY_POOL_ID=[Identity Pool ID]
 ATHENA_DATABASE=[Athena Database]
+IDENTITY_POOL_ID=[Identity Pool ID]
+# Uncomment for use with your own domain and SSL cert
+#CFN_DOMAINNAME=[CF Domain Name]
+#CFN_CFCERTIFICATE=[CF Certificate Arn]
