--- a/.template.env
+++ b/.template.env
@@ -3,7 +3,7 @@ AWS_KEY=[Access Key ID]
 AWS_SECRET=[Secret Access Key]
 AWS_VPC_SUBNET=[VPC Subnet]
 AWS_EC2_KEY_NAME=[EC2 Key]
-AWS_SNS_EMAIL_ADDRESS=[SNS Email]
+AWS_SNS_EMAIL_ADDRESS=[SNS Notification Email]
 S3_EMR_BUCKET_NAME=[EMR ADAM Code Bucket]
 S3_VCF_BUCKET_NAME=[VCF Input Bucket]
 S3_VARIANTS_BUCKET_NAME=[Parquet Output Bucket]
