--- a/.template.env
+++ b/.template.env
@@ -7,9 +7,10 @@ AWS_SNS_EMAIL_ADDRESS=[SNS Notification Email]
 S3_EMR_BUCKET_NAME=[EMR ADAM Code Bucket]
 S3_VCF_BUCKET_NAME=[VCF Input Bucket]
 S3_VARIANTS_BUCKET_NAME=[Parquet Output Bucket]
-S3_ANNOTATIONS_BUCKET_NAME=[Clinvar Annotations Input Bucket]
 ATHENA_DATABASE=[Athena Database]
 IDENTITY_POOL_ID=[Identity Pool ID]
+# Uncomment to use your own annotations
+# S3_ANNOTATIONS_BUCKET_NAME=[Clinvar Annotations Input Bucket]
 # Uncomment for use with your own domain and SSL cert
 #CFN_DOMAINNAME=[CF Domain Name]
 #CFN_CFCERTIFICATE=[CF Certificate Arn]
